[package]
name = "iroha-demo-solana-sbf-validator"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
publish = false

[dependencies]
solana-sbpf = { version = "=0.21.0", default-features = false }

[build-dependencies]
sha2 = { version = "=0.10.9", default-features = false }

[target.'cfg(unix)'.dependencies]
libc = "=0.2.186"

[target.'cfg(all(not(target_os = "windows"), target_arch = "x86_64"))'.dependencies]
solana-sbpf = { version = "=0.21.0", default-features = false, features = ["jit"] }

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = true
