[package]
name = "sccp-taira-xor"
version = "0.1.0"
edition = "2021"
description = "Solana testnet SCCP verifier surface for TAIRA XOR route evidence"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "4.0.0"
solana-sdk-ids = "3.1.0"
solana-system-interface = { version = "3.1.0", features = ["bincode"] }

[dev-dependencies]
bincode = "=1.3.3"
solana-account = "=3.4.0"
solana-instruction-error = "=2.4.0"
solana-keypair = "=3.1.2"
solana-program-test = { version = "=4.0.0", features = ["agave-unstable-api"] }
solana-signer = "=3.0.0"
solana-sysvar-v3 = { package = "solana-sysvar", version = "=3.1.1" }
solana-sysvar-v4 = { package = "solana-sysvar", version = "=4.0.0" }
solana-transaction = { version = "=3.1.0", features = ["bincode"] }
solana-transaction-error = "=3.1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
